--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
                                 <h4>Content is paramount to us, we believe website design should be crafted around the user,
                                     their needs, and the desired outcome of a website visit. It should be focused on the
                                     user’s challenges and the website’s ability to solve these issues. </h4>
-                                    <h3>
-                                        <p style="padding-top: 5px; padding-bottom: 20px; margin-top: 2px; align-content: center;"><a class="btn btn-default" href="#info" role="button">More Info &raquo;</a></p>
-                                    </h3>
+                                <h3>
+                                    <p style="padding-top: 5px; padding-bottom: 20px; margin-top: 2px; align-content: center;"><a class="btn btn-default" href="#info" role="button">More Info &raquo;</a></p>
+                                </h3>
                             </p>
 
                         </div>
@@ -202,16 +202,18 @@
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" id="worktext">
                                 <p><a href="img/U_Con.jpg" target="blank">Diversity</a></p>
-                                <p>Diversity: the art of thinking independently together. The new understanding of diversity involves more
-                                  than increasing the number of different identity groups on the payroll. </p>
+                                <p>Diversity: the art of thinking independently together. The new understanding of diversity
+                                    involves more than increasing the number of different identity groups on the payroll.
+                                </p>
                             </div>
                         </div>
 
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="iwork">
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" id="worktext">
-                                <p><a href="http://bit.ly/2rNmzxe"target="blank">Games</a></p>
-                                <p>In the past 30 years, video games have become more beautiful, more intricate and more intense -
-                                  but we still lack a critical language to evaluate them. Will we ever move beyond previews and reviews?</p>
+                                <p><a href="http://bit.ly/2rNmzxe" target="blank">Games</a></p>
+                                <p>In the past 30 years, video games have become more beautiful, more intricate and more intense
+                                    - but we still lack a critical language to evaluate them. Will we ever move beyond previews
+                                    and reviews?</p>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                                 <a href="http://bit.ly/2rNmzxe" target="blank"><img src="img/game.jpg" class="img-responsive" alt= logo-zeke></a>
@@ -225,7 +227,8 @@
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" id="worktext">
                                 <p><a href="img/U_Con.jpg" target="blank">Health</a></p>
                                 <p>Most people know that humor is good for whatever ails them but when was the last time you
-                                   laughed out loud? The purpose of this page is to help you do just that by sharing the funny side of health care. See what our folks share their experiences </p>
+                                    laughed out loud? The purpose of this page is to help you do just that by sharing the
+                                    funny side of health care. See what our folks share their experiences </p>
                             </div>
                         </div>
                     </div>
@@ -468,7 +471,9 @@
         </div>
         <div class="footer">
             <footer>
-                <center><div class="footer-copyright">&copy; Copyright 2017 ZekHub - All Rights Reserved</div></center>
+                <center>
+                    <div class="footer-copyright">&copy; Copyright 2017 ZekHub - All Rights Reserved</div>
+                </center>
             </footer>
         </div>
         <!--..............................................-->
@@ -495,10 +500,6 @@
         <!-- Bootstrap core JS -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <!-- Can place script tags with JavaScript files here -->
-        <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-        <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/asareyaw" data-format="hover" data-related="false"></script>
-
-
     </body>
 
 </html>
